kubernetes/apps/default/cloudflare-os/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloudflare-os
spec:
  selector:
    app: cloudflare-os
  ports:
    - port: 8787
      targetPort: 8787
