kubernetes/apps/default/cloudflare-os/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloudflare-os
spec:
  hostnames:
    - cloudflare-os.ringbell.cc
  parentRefs:
    - name: internal
      namespace: networking
  rules:
    - backendRefs:
        - name: cloudflare-os
          port: 8787
